--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
 /* Contact Header */
 .contact-header {
-    background-image: url('con.webp');
+    background-image: url('contact.jpg');
     background-size: cover;
     background-position: center;
     padding: 100px 0;
