--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -12,7 +12,7 @@ h3 {
 
 /* Hero Section */
 .hero-section {
-    background-image: url('about.jpg');
+    background-image: url(about.jpg);
     background-size: cover;
     background-position: center;
     height: 500px;
