--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,6 +1,6 @@
 
   .hero-section-type {
-    background-image: url('public/type.jpg');
+    background-image: url("C:/Users/lavog/OneDrive/Documents/GitHub/Handcrafts/public/type.jpg");
     background-size: cover;
     background-position: center;
     height: 400px;
