--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   /* Intro Styles */
   .intro {
     position: relative;
-    background-image: url("public/pexels-minan1398-1087727.jpg");
+    background-image: url("C:/Users/lavog/OneDrive/Documents/GitHub/Handcrafts/public/pexels-minan1398-1087727.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
