--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
 /* Contact Header */
 .contact-header {
-    background-image: url('public/contact.jpg');
+    background-image: url("C:/Users/lavog/OneDrive/Documents/GitHub/Handcrafts/public/contact.jpg");
     background-size: cover;
     background-position: center;
     padding: 100px 0;
